--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
         .hero-bg {
             background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.8)),
-                url('https://images.unsplash.com/photo-1586528116311-ad8dd3c8310d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80');
+                url('./img/banner.jpg');
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
@@ -144,8 +144,7 @@
                 Transportes Dibat <span class="block text-blue-300">Fletes y Mudanzas</span>
             </h1>
             <p class="text-xl md:text-2xl mb-8 max-w-3xl mx-auto">
-                Somos un equipo de trabajo dedicados al servicio de logística, fletes y mudanzas. Transporte seguro,
-                rápido y eficiente.
+                Especialidad en Servicio de Mudanza con el camión: Embalaje, Carga, Descarga, etc.
             </p>
             <div class="space-y-4 sm:space-y-0 sm:space-x-4 sm:flex sm:justify-center">
                 <a href="https://api.whatsapp.com/send/?phone=541150545987&text=%C2%A1HOLA%21+me+gustar%C3%ADa+recibir+una+cotizaci%C3%B3n+espero+su+respuesta+%C2%A1MUCHAS+GRACIAS%21&type=phone_number&app_absent=0"
@@ -341,27 +340,34 @@
                             </div>
                             <h3 class="text-2xl font-bold text-gray-900 mb-2">Servicio Normal</h3>
                             <p class="text-gray-600">
-                                Ideal para mudanzas y transportes estándar
+                                Ideal para servicio de mudanza estándar.
                             </p>
                         </div>
 
                         <ul class="space-y-3 mb-6">
                             <li class="flex items-center">
                                 <i class="fas fa-check-circle text-green-500 mr-3"></i>
-                                <span class="text-gray-700">Transporte seguro de tus pertenencias</span>
+                                <span class="text-gray-700">Transporte seguro,unidades 0k.</span>
                             </li>
                             <li class="flex items-center">
                                 <i class="fas fa-check-circle text-green-500 mr-3"></i>
-                                <span class="text-gray-700">Carga y descarga incluida</span>
+                                <span class="text-gray-700">Carga y descarga incluida. Todo el personal con Art.</span>
                             </li>
                             <li class="flex items-center">
                                 <i class="fas fa-check-circle text-green-500 mr-3"></i>
-                                <span class="text-gray-700">KIT DE EMBALAJE (Cajas, Rollos de cinta, Cinta de
-                                    Fragilidad)</span>
+                                <span class="text-gray-700">Entrega de cajas+cintas en tu domicilio. Se entregan con
+                                    antelación a tu mudanza.
+                                </span>
                             </li>
                             <li class="flex items-center">
                                 <i class="fas fa-check-circle text-green-500 mr-3"></i>
-                                <span class="text-gray-700">Horarios flexibles</span>
+                                <span class="text-gray-700">No incluye embalaje de los muebles,servicio
+                                    económico.</span>
+                            </li>
+                            <li class="flex items-center">
+                                <i class="fas fa-check-circle text-green-500 mr-3"></i>
+                                <span class="text-gray-700">Abona en efectivo o Mercado Pago al finalizar tu
+                                    mudanza.</span>
                             </li>
                         </ul>
                     </div>
@@ -374,7 +380,7 @@
                             </div>
                             <h3 class="text-2xl font-bold text-gray-900 mb-2">Servicio Completo</h3>
                             <p class="text-gray-600">
-                                Servicio integral con todos los extras incluidos
+                                Servicio full para clientes exigentes.
                             </p>
                         </div>
 
@@ -385,15 +391,17 @@
                             </li>
                             <li class="flex items-center">
                                 <i class="fas fa-check-circle text-green-500 mr-3"></i>
-                                <span class="text-gray-700">Embalaje profesional incluido</span>
+                                <span class="text-gray-700">Embalaje profesional por nuestros operarios con mantas y
+                                    strech industrial para proteger todos tus muebles.</span>
                             </li>
                             <li class="flex items-center">
                                 <i class="fas fa-check-circle text-green-500 mr-3"></i>
-                                <span class="text-gray-700">Desarme y armado de muebles</span>
+                                <span class="text-gray-700">Desarme de camas/mesas/muebles/cunas en origen.</span>
                             </li>
                             <li class="flex items-center">
                                 <i class="fas fa-check-circle text-green-500 mr-3"></i>
-                                <span class="text-gray-700">Operarios especializados</span>
+                                <span class="text-gray-700">Ensamble de camas/mesas/muebles/cunas en tu nuevo hogar para
+                                    que tengas todo listo para usar.</span>
                             </li>
                         </ul>
                     </div>
@@ -505,6 +513,58 @@
         </div>
     </section>
 
+    <!--Contacto Section-->
+    <section id="contacto" class="py-20 bg-gray-50">
+        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+            <div class="text-center mb-16">
+                <h2 class="text-3xl md:text-4xl font-bold text-gray-900 mb-4">Contacto</h2>
+            </div>
+
+            <div class="grid grid-cols-1 lg:grid-cols-2 gap-12 items-center">
+                <div>
+                    <h3 class="text-2xl font-bold text-gray-900 mb-6">WhatsApp</h3>
+                    <p class="text-gray-600 mb-6">
+                        Contactanos via WhatsApp para consultas rápidas y cotizaciones.
+                    </p>
+
+                    <div class="bg-white rounded-xl shadow-md p-6 transition-shadow duration-300 mb-6">
+                        <div class="flex items-center space-x-4">
+                            <div class="bg-green-600 rounded-full p-3">
+                                <svg class="w-8 h-8 text-white" fill="currentColor" viewBox="0 0 24 24">
+                                    <path
+                                        d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.471-.148-.67.15-.197.297-.767.966-.94 1.164-.173.199-.347.223-.644.075-.297-.15-1.255-.463-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.298-.347.446-.52.149-.174.198-.298.298-.497.099-.198.05-.371-.025-.52-.075-.149-.669-1.612-.916-2.207-.242-.579-.487-.5-.669-.51-.173-.008-.371-.01-.57-.01-.198 0-.52.074-.792.372-.272.297-1.04 1.016-1.04 2.479 0 1.462 1.065 2.875 1.213 3.074.149.198 2.096 3.2 5.077 4.487.709.306 1.262.489 1.694.625.712.227 1.36.195 1.871.118.571-.085 1.758-.719 2.006-1.413.248-.694.248-1.289.173-1.413-.074-.124-.272-.198-.57-.347m-5.421 7.403h-.004a9.87 9.87 0 01-5.031-1.378l-.361-.214-3.741.982.998-3.648-.235-.374a9.86 9.86 0 01-1.51-5.26c.001-5.45 4.436-9.884 9.888-9.884 2.64 0 5.122 1.03 6.988 2.898a9.825 9.825 0 012.893 6.994c-.003 5.45-4.437 9.884-9.885 9.884m8.413-18.297A11.815 11.815 0 0012.05 0C5.495 0 .16 5.335.157 11.892c0 2.096.547 4.142 1.588 5.945L.057 24l6.305-1.654a11.882 11.882 0 005.683 1.448h.005c6.554 0 11.890-5.335 11.893-11.893A11.821 11.821 0 0020.465 3.63" />
+                                </svg>
+                            </div>
+                            <div class="flex-1">
+                                <p class="text-green-600 font-medium text-2xl">+54 9 11 5054-5987</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="bg-white rounded-xl shadow-md p-6 transition-shadow duration-300">
+                        <div class="flex items-center space-x-4">
+                            <div class="bg-green-600 rounded-full p-3">
+                                <svg class="w-8 h-8 text-white" fill="currentColor" viewBox="0 0 24 24">
+                                    <path
+                                        d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.471-.148-.67.15-.197.297-.767.966-.94 1.164-.173.199-.347.223-.644.075-.297-.15-1.255-.463-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.298-.347.446-.52.149-.174.198-.298.298-.497.099-.198.05-.371-.025-.52-.075-.149-.669-1.612-.916-2.207-.242-.579-.487-.5-.669-.51-.173-.008-.371-.01-.57-.01-.198 0-.52.074-.792.372-.272.297-1.04 1.016-1.04 2.479 0 1.462 1.065 2.875 1.213 3.074.149.198 2.096 3.2 5.077 4.487.709.306 1.262.489 1.694.625.712.227 1.36.195 1.871.118.571-.085 1.758-.719 2.006-1.413.248-.694.248-1.289.173-1.413-.074-.124-.272-.198-.57-.347m-5.421 7.403h-.004a9.87 9.87 0 01-5.031-1.378l-.361-.214-3.741.982.998-3.648-.235-.374a9.86 9.86 0 01-1.51-5.26c.001-5.45 4.436-9.884 9.888-9.884 2.64 0 5.122 1.03 6.988 2.898a9.825 9.825 0 012.893 6.994c-.003 5.45-4.437 9.884-9.885 9.884m8.413-18.297A11.815 11.815 0 0012.05 0C5.495 0 .16 5.335.157 11.892c0 2.096.547 4.142 1.588 5.945L.057 24l6.305-1.654a11.882 11.882 0 005.683 1.448h.005c6.554 0 11.890-5.335 11.893-11.893A11.821 11.821 0 0020.465 3.63" />
+                                </svg>
+                            </div>
+                            <div class="flex-1">
+                                <p class="text-green-600 font-medium text-2xl">+54 9 11 6607-0553</p>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+
+                <div class="bg-white p-8 rounded-lg shadow-lg">
+                    <img src="./img/contacto.jpg" title="Contacto por WhatsApp" alt="Contacto por WhatsApp" class="h-96 mx-auto"
+                        onerror="this.src=''; this.alt='Imagen no disponible'; this.style.display='none';">
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- Footer -->
     <footer class="bg-black text-white py-12">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
@@ -520,11 +580,13 @@
                         <span class="font-semibold">Dirección:</span> 1407, Buenos Aires
                     </p>
                     <div class="flex space-x-4">
-                        <a href="https://www.instagram.com/logisticadibat/" target="_blank" class="text-pink-400 hover:text-white transition-colors">
+                        <a href="https://www.instagram.com/logisticadibat/" target="_blank"
+                            class="text-pink-400 hover:text-white transition-colors">
                             <i class="fab fa-instagram text-xl"></i>
                         </a>
-                        <a href="https://api.whatsapp.com/send/?phone=541150545987&text=%C2%A1HOLA%21+me+gustar%C3%ADa+recibir+una+cotizaci%C3%B3n+espero+su+respuesta+%C2%A1MUCHAS+GRACIAS%21&type=phone_number&app_absent=0" class="text-green-400 hover:text-white transition-colors"
-                            target="_blank" rel="noopener noreferrer">
+                        <a href="https://api.whatsapp.com/send/?phone=541150545987&text=%C2%A1HOLA%21+me+gustar%C3%ADa+recibir+una+cotizaci%C3%B3n+espero+su+respuesta+%C2%A1MUCHAS+GRACIAS%21&type=phone_number&app_absent=0"
+                            class="text-green-400 hover:text-white transition-colors" target="_blank"
+                            rel="noopener noreferrer">
                             <i class="fab fa-whatsapp text-xl"></i>
                         </a>
                         <a href="https://www.google.com/maps/place/Mudanzas-fletes-logistica/@-34.6117617,-58.508508,17z/data=!3m1!4b1!4m5!3m4!1s0x95bcb779bb020ba5:0x9cadb26a3c1db77a!8m2!3d-34.6117617!4d-58.508508"
