--- a/index.html
+++ b/index.html
@@ -302,9 +302,9 @@
                     <div class="text-3xl text-blue-600 mb-4">
                         <i class="fas fa-shipping-fast"></i>
                     </div>
-                    <h3 class="text-lg font-bold text-gray-900 mb-3">Entrega de Kits</h3>
-                    <p class="text-gray-600 text-sm">
-                        Kits de embalaje completos entregados en tu domicilio.
+                    <h3 class="text-lg font-bold text-gray-900 mb-3">Entrega de Kits para Mudanza</h3>
+                    <p class="text-gray-500 text-xs">
+                        Llevamos a tu domicilio kits de embalaje para que puedas dar inicio al embalaje de enseres personales pequeños.
                     </p>
                 </div>
 
@@ -317,7 +317,7 @@
                         Todo lo necesario para embalar.
                     </p>
                     <p class="text-xs text-gray-500">
-                        Cajas • Cintas • Film Burbuja
+                        Cajas doble corrugado • Cinta adhesiva común • Film burbuja • Cintas con leyenda fragil.
                     </p>
                 </div>
             </div>
@@ -347,7 +347,7 @@
                         <ul class="space-y-3 mb-6">
                             <li class="flex items-center">
                                 <i class="fas fa-check-circle text-green-500 mr-3"></i>
-                                <span class="text-gray-700">Transporte seguro,unidades 0k.</span>
+                                <span class="text-gray-700">Transporte seguro, unidades cero kilómetro.</span>
                             </li>
                             <li class="flex items-center">
                                 <i class="fas fa-check-circle text-green-500 mr-3"></i>
