--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="index, follow">
     <title>Transportes Dibat</title>
     <link rel="icon" href="./img/icon.png" type="image/x-icon">
     <script src="https://cdn.tailwindcss.com"></script>
