Cambios en redirects y css

--- a/index.html
+++ b/index.html
@@ -76,6 +76,11 @@
             .whatsapp-float i {
                 margin-top: 13px;
             }
+
+            .hero-bg {
+
+                background-attachment:local;
+            }
         }
     </style>
 </head>
@@ -145,7 +150,7 @@
             <h1 class="text-4xl md:text-6xl font-bold mb-6">
                 Transportes Dibat <span class="block text-blue-300">Fletes y Mudanzas</span>
             </h1>
-            <p class="text-xl md:text-2xl mb-8 max-w-3xl mx-auto">
+            <p class="text-md md:text-2xl mb-8 max-w-3xl mx-auto">
                 Especialidad en Servicio de Mudanza con el camión: Embalaje, Carga, Descarga, etc.
             </p>
             <div class="space-y-4 sm:space-y-0 sm:space-x-4 sm:flex sm:justify-center">
@@ -306,7 +311,8 @@
                     </div>
                     <h3 class="text-lg font-bold text-gray-900 mb-3">Entrega de Kits para Mudanza</h3>
                     <p class="text-gray-500 text-xs">
-                        Llevamos a tu domicilio kits de embalaje para que puedas dar inicio al embalaje de enseres personales pequeños.
+                        Llevamos a tu domicilio kits de embalaje para que puedas dar inicio al embalaje de enseres
+                        personales pequeños.
                     </p>
                 </div>
 
@@ -560,7 +566,8 @@
                 </div>
 
                 <div class="bg-white p-8 rounded-lg shadow-lg">
-                    <img src="./img/contacto.jpg" title="Contacto por WhatsApp" alt="Contacto por WhatsApp" class="h-96 mx-auto"
+                    <img src="./img/contacto.jpg" title="Contacto por WhatsApp" alt="Contacto por WhatsApp"
+                        class="h-96 mx-auto"
                         onerror="this.src=''; this.alt='Imagen no disponible'; this.style.display='none';">
                 </div>
             </div>
